<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/constraintback">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fragments.ApplicationFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/loginLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="25dp"
            android:elevation="20dp"
            android:src="@drawable/exposys"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/linear"
            android:elevation="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/enter_your_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/college_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/contact_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/_10th_percentage"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/twelve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/_12th_percentage"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/streams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/streams"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/months"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/form"
                android:hint="@string/duration"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn"
            android:padding="10dp"
            android:text="@string/submit_your_form"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            tools:ignore="TextContrastCheck">

        </androidx.appcompat.widget.AppCompatButton>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>