<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Fragments.FormInfoFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="15dp">

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:fontFamily="@font/akaya_telivigala"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/notice"
                android:textSize="22sp"
                android:textStyle="normal" />

        </androidx.cardview.widget.CardView>
        <EditText
            android:id="@+id/passcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_passcode"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textColorHint="#757575"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/form"
            android:padding="15dp"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:background="@drawable/backbtn"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>